<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/gradient_box"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:background="@drawable/purple_grad">

        <RelativeLayout
            android:id="@+id/profile_icon_layout"
            android:layout_width="80dp"
            android:layout_height="78dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/circle_border"
            android:gravity="center">

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/black_circle"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/profile_circle" />
        </RelativeLayout>

        <TextView
            android:id="@+id/username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_icon_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/new_user"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/match_playlist_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gradient_box"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorPrimaryLight"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/num_matches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matches"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/num_songs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/songs"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/profile_info_body"
        android:layout_below="@id/match_playlist_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/enter_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="Name"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_white"
                    android:textSize="19sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/hint_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fav_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_genre"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/enter_fav_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Name"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_fav_genre"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_white"
                    android:textSize="19sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colour"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/enter_colour"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:autofillHints="Colour"
                    android:background="@android:color/transparent"
                    android:fontFamily="serif"
                    android:text="@string/choose_colour"
                    android:textColor="@color/hint_white"
                    android:textSize="19sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/hint_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_songs"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="17sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selectedSongs"
                    android:layout_width="match_parent"
                    android:layout_height="109dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/hint_white"/>
            </LinearLayout>

            <Button
                android:id="@+id/add_songs"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/purple_grad_ovel"

                android:fontFamily="sans-serif-medium"
                android:text="Add Songs"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/save_profile"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/purple_grad_ovel"

                android:fontFamily="sans-serif-medium"
                android:text="Save"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>