...
        android:layout_marginTop="16dp"
        android:text="Song"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dlt_btn"/>

    <TextView
        android:id="@+id/artist"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
...

    <Button
        android:id="@+id/dlt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="Delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/song_title"
        app:layout_constraintTop_toTopOf="parent"
...
