<resources>
    <string name="app_name">Tunnect</string>
    <string name="user_name">\tUser Name</string>
    <string name="user_info">Prefers "Genre" Music</string>
    <string name="like_btn">Like</string>
    <string name="dislike_btn">Dislike</string>
    <string name="message_btn">Messages</string>
    <string name="profile_btn">Profile</string>
    <string name="settings_btn">Settings</string>
    <string name="send_btn">SEND</string>
    <string name="message_prompt">Enter message</string>
    <string name="handle_notification_now">We are going to do something with our notification right now!</string>
    <string name="search_page_btn">Search Songs</string>
    <string name="new_user">New User</string>
    <string name="name">Username</string>
    <string name="enter_name">Enter Username</string>
    <string name="fave_art">Favourite Artist</string>
    <string name="enter_fave_art">Enter Favourite Artist</string>
    <string name="colour">Icon Colour</string>
    <string name="choose_colour">Choose Icon Colour</string>
    <string name="songs">SONGS</string>
    <string name="matches">MATCHES</string>
    <string name="zero">0</string>
    <string name="user_songs">Selected Songs</string>
    <string name="fav_genre">Favourite Genre</string>
    <string name="enter_fav_genre">Enter Favourite Genre</string>

</resources>